--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,15 @@ jobs:
 
     - name: Configure
       run: |
-          cd Firmware/busPirate.X
-          mplabxBuildAll.py
+          /opt/microchip/mplabx/v6.20/mplab_platform/bin/prjMakefilesGenerator.sh -v "${{ github.workspace }}/Firmware/busPirate.X"
+
+    - name: Build
+      run: |
+          make -C "${{ github.workspace }}/Firmware/busPirate.X" CONF="BusPirate_v3" build
+
+    - name: Build
+      run: |
+          make -C "${{ github.workspace }}/Firmware/busPirate.X" CONF="BusPirate_v4" build
           
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
